--- a/components/CardProduct/CardProduct.module.css
+++ b/components/CardProduct/CardProduct.module.css
@@ -4,7 +4,7 @@
   row-gap: 6px;
   font-size: 14px;
   line-height: 22px;
-  font: var(--font-dm);
+  font-family: var(--font-dm);
 
   @media (min-width: 1024px) {
     font-size: 20px;
