--- a/components/Select/Select.module.css
+++ b/components/Select/Select.module.css
@@ -1,12 +1,16 @@
 .root {
+  width: 100%;
   height: 52px;
   border: 1px solid var(--gray-light);
   border-radius: 5px;
   padding: 12px 15px;
+  font-family: var(--font-dm);
+    font-size: 14px;
+    line-height: 22px;
 }
 
 .options {
-  font: var(--font-dm);
+  font-family: var(--font-dm);
   font-size: 14px;
   line-height: 22px;
 }
