--- a/components/Toggle/Toggle.module.css
+++ b/components/Toggle/Toggle.module.css
@@ -10,8 +10,33 @@
   line-height: 27px;
 }
 
-.btn {
+.input {
   position: relative;
+  appearance: none;
+}
+
+.input::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background: var(--white);
+  height: 13px;
+  width: 13px;
+  top: 0;
+  right: 5px;
+  border-radius: 50%;
+  border: 1px solid var(--gray-dark);
+  transition: all 0.2s ease-in-out;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+
+.input::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
   width: 35px;
   height: 22px;
   background: var(--gray-light);
@@ -19,26 +44,13 @@
   border-radius: 10px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  transform: translateY(-50%);
 }
 
-.btn::before {
-  content: "";
-  display: block;
-  position: absolute;
-  background: var(--white);
-  height: 13px;
-  width: 13px;
-  top: 3px;
-  left: 15px;
-  border-radius: 50%;
-  border: 1px solid var(--gray-dark);
-  transition: all 0.2s ease-in-out;
-}
-
-.active.btn {
+.active.input::after {
   background: var(--gray-dark);
 }
 
-.active.btn::before {
-  left: 3px;
+.active.input::before {
+  right: 17px;
 }
