--- a/app/catalog/page.module.css
+++ b/app/catalog/page.module.css
@@ -1,19 +1,38 @@
 .page {
   display: grid;
-  grid-template-columns: 260px 1fr;
-  grid-template-rows: auto 1fr;
+
+  @media (min-width: 640px) {
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: auto 1fr;
+    align-items: flex-start;
+    column-gap: 10px;
+  }
+
+  @media (min-width: 1024px) {
+    grid-template-columns: 260px 1fr;
+    column-gap: 20px;
+  }
 }
 
 .title {
-  grid-row: 1/2;
-  grid-column: 1/3;
-  padding-top: 50px;
-  padding-bottom: 36px;
+  display: none;
+
+  @media (min-width: 640px) {
+    display: block;
+    grid-row: 1/2;
+    grid-column: 1/3;
+    padding-top: 50px;
+    padding-bottom: 36px;
+  }
 }
 
 .form {
-  grid-row: 2/-1;
-  grid-column: 1/2;
+  display: none;
+
+  @media (min-width: 640px) {
+    grid-row: 2/-1;
+    grid-column: 1/2;
+  }
 }
 
 .list {
