--- a/components/FormCatalog/FormCatalog.module.css
+++ b/components/FormCatalog/FormCatalog.module.css
@@ -1,6 +1,10 @@
 .root {
-  display: grid;
-  grid-template-rows: repeat(4, auto);
-  row-gap: 36px;
-  width: 100%;
+  display: none;
+
+  @media (min-width: 640px) {
+    display: grid;
+    grid-template-rows: repeat(4, auto);
+    row-gap: 36px;
+    width: 100%;
+  }
 }
